Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Zope 3.2.3 (unreleased)

    Bug fixes

      - Fixed HTML rendered by ItemsMultiDisplayWidget: The 'name' attribute
        is not allowed in list tags and 'type' has a different meaning.

      - Fileresources now also set the Cache-control headers on 304
        responses. This speeds up page loads a lot on pages with many
        resources.

      - Fixed issue 730: Subversion 1.4 breaks mkzopeinstance.py

      - Fixed encoding of newlines, carriage returns, and tabs when
        encoding attributes for widgets so we're consistent under all
        Python 2.4.x versions (including 2.4.4, which failed tests before).

      - Fixed issue 535: make HTTPInputStream work with Python 2.4.4.

      - Fixed zope.app.catalog.attribute.AttributeIndex. It did not
        remove the the previous value/object from the index IF the NEW
        value was None.

      - Fixed zope.index.field.index.FieldIndex. Unindex broke if the value
        somehow dropped out of the forward index.

  Zope 3.2.2 (2006/10/02)

    Bug fixes

      - Improved fix for issue 599: Made sure i18n Message based Invalid
        exceptions are handled correctly.

      - Fixed a bug in getImageInfo which could cause an
        UnboundLocalError under certain conditions.

      - Fixed issue 691: make formlib javascript to display help texts more
        robust. It can now also display the helptext correctly if a complex
        widget with multiple fields and/or fields with the widget name used as
        a prefix for the form elements is shown.

      - Fixed issue 690: removed a javascript call from formlib/pageform.pt
        which depended on a non-existent function. It was a holdover from when
        the library was an external project.
