@@ -10,6 +10,9 @@ Zope Changes
 
     Bug fixes
 
+      - Fixed bug #723: Testbrowser was handling multiple submit buttons with
+        the same name incorrectly.
+
       - Fixed HTML rendered by ItemsMultiDisplayWidget: The 'name' attribute
         is not allowed in list tags and 'type' has a different meaning.
 
